[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cadaST"
version = "0.0.4"
authors = [
  { name="Xianhan Qin", email="q764579066@gmail.com" },
]
description = "A python implement of cadaST"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "anndata>=0.10.9",
    "numpy>=1.23.5",
    "scikit-learn>=1.5.2",
    "scipy>=1.13.1",
    "tqdm>=4.66.5",
]

[project.urls]
Homepage = "https://github.com/Khadaq2001/cadaST"
Issues = "https://github.com/Khadaq2001/cadaST/issues"


